<resources>
    <string name="app_name">UTV</string>
    <string name="copyright">Powered by UTV ©2017 ZhishiSoft All Rights Reserced.</string>
    <string name="home">推荐</string>
    <string name="find">发现</string>
    <string name="message">消息</string>
    <string name="game">游戏</string>
    <string name="mine">我</string>
    <string name="app_rule">点击下一步即代表同意《%s用户使用协议》</string>
    <string name="app_rule_register">点击注册即代表同意《%s用户使用协议》</string>
    <string name="user_rule_register">用户使用协议</string>
    <string name="hot">热门</string>
    <string name="the_last">最新</string>
    <string name="notification">通知</string>
    <string name="system_notification">系统消息</string>
    <string name="system_notification_null">暂无系统消息</string>
    <string name="critical">收到的评论</string>
    <string name="at_me_message">&#064;我的</string>
    <string name="comment">评论</string>
    <string name="like">赞</string>
    <string name="liked">收到的赞</string>
    <string name="like_me">赞了我</string>
    <string name="like_me_more">等人赞了我</string>
    <string name="comment_me">评论了我</string>
    <string name="at_me">&#064;了我</string>
    <string name="at_me_more">等人&#064;了我</string>
    <string name="comment_me_more">等人评论了我</string>
    <string name="recieved_review">提交评论置顶</string>
    <string name="comment_success">评论成功</string>
    <string name="comment_digg_much_hint">等人</string>
    <string name="comment_fail">评论失败</string>
    <string name="comment_ing">评论中&#8230;</string>
    <string name="default_message_group">群组</string>
    <string name="has_no_body">还没有人</string>
    <string name="ts_helper">TS助手</string>
    <string name="ts_helper_default_tip">小助手在线，点击告诉我们你的需求，即时快速反应。</string>
    <string name="personal_page">个人主页</string>
    <string name="watch_history">观看历史</string>
    <string name="my_invitation">我的帖子</string>
    <string name="my_download">我的下载</string>
    <string name="my_info">我的文章</string>
    <string name="feedback">意见反馈</string>
    <string name="ranking">排行榜</string>
    <string name="dig_ranking">点赞排行榜</string>
    <string name="gold">金币</string>
    <string name="mine_collect">我的收藏</string>
    <string name="suggetion">意见反馈</string>
    <string name="question_answer">Q&amp;A</string>
    <string name="draft_box">草稿箱</string>
    <string name="certification">用户认证</string>
    <string name="setting">设置</string>
    <string name="wallet">钱包</string>
    <string name="mine_wallet">我的钱包</string>
    <string name="mine_download">我的下载</string>
    <string name="me_music">购买的音乐</string>
    <string name="friends">好友</string>
    <string name="fans">粉丝</string>
    <string name="fans_count">粉丝：%1$s</string>
    <string name="system_info">系统消息</string>
    <string name="my_qr_code_content">uid=%d</string>
    <string name="my_qr_code_title">扫一扫</string>
    <string name="qr_scan_alert">扫描二维码，添加关注</string>
    <string name="qr_scan_failed_alert">扫码失败，请重新扫描</string>
    <string name="my_qr_code_share">分享我的二维码</string>
    <string name="information">资讯</string>
    <string name="chanel">频道</string>
    <string name="active">活动</string>
    <string name="buy_goods">购物</string>
    <string name="find_topic">话题</string>
    <string name="find_person">@string/find_someone</string>
    <string name="near_person">附近的人</string>
    <string name="group">圈子</string>
    <string name="quiz">问答</string>
    <string name="user_info">个人资料</string>
    <string name="change_head_icon">更换头像</string>
    <string name="user_name">用户名</string>
    <string name="edit_user_name">设置用户名</string>
    <string name="sex">性别</string>
    <string name="select_sex">选择性别</string>
    <string name="city">城市</string>
    <string name="select_city">选择居住地</string>
    <string name="select_tag">选择标签</string>
    <string name="tag">标签</string>
    <string name="introduce">简介</string>
    <string name="edit_introduce">编辑简介</string>
    <string name="recomment_user">推荐用户</string>
    <string name="all">全部</string>
    <string name="edit_userinfo_success">修改成功</string>
    <string name="edit_userinfo_failure">修改失败</string>
    <string name="edit_userinfo_ing">修改中&#8230;</string>
    <string name="update_head_success">头像上传成功</string>
    <string name="update_head_failure">头像上传失败</string>
    <string name="update_head_ing">头像上传中&#8230;</string>
    <string name="vertify">认证</string>
    <string name="tags_manager">标签管理</string>
    <string name="account_manager">账户管理</string>
    <string name="change_password">修改密码</string>
    <string name="clean_cache">清理缓存</string>
    <string name="is_sure_clean_cache">缓存大小:%s，确定清理缓存？</string>
    <string name="about_us">关于我们</string>
    <string name="check_version">版本更新</string>
    <string name="download_new_version">立即更新</string>
    <string name="version_name">版本号：%s</string>
    <string name="version_content_length">大小：%s M</string>
    <string name="ignore_new_version">忽略</string>
    <string name="login_out">退出登录</string>
    <string name="login_out_sure">退出</string>
    <string name="is_sure_login_out">确定退出登录？</string>
    <string name="clean_success">删除成功</string>
    <string name="clean_failure">删除失败!</string>
    <string name="cache_zero_size">0.0B</string>
    <string name="change">更改</string>
    <string name="account_bind_phone">绑定手机号</string>
    <string name="account_bind_email">绑定邮箱</string>
    <string name="account_bind_qq">绑定QQ</string>
    <string name="account_bind_wechat">绑定微信</string>
    <string name="account_bind_weibo">绑定微博</string>
    <string name="binding">确定绑定</string>
    <string name="remove_binding">解除绑定</string>
    <string name="had_binding">已绑定</string>
    <string name="not_binding">未绑定</string>
    <string name="crop_head_icon">更换头像</string>
    <string name="crop_bg_cover">更换封面</string>
    <string name="crop_ing">图片裁剪中&#8230;</string>
    <string name="crop_success">图片裁剪成功</string>
    <string name="crop_failure">图片裁剪失败</string>
    <string name="album_list">相册</string>
    <string name="preview">预览</string>
    <string name="album_selected_count">完成(%1$d/%2$d)</string>
    <string name="album_selected">选择</string>
    <string name="save_to_photo">保存至手机相册</string>
    <string name="save_success">图片保存成功</string>
    <string name="save_pic_ing">保存中&#8230;</string>
    <string name="save_failure1">图片保存失败</string>
    <string name="save_failure2">sd卡不存在</string>
    <string name="all_photos">所有图片</string>
    <string name="toll_setting">收费选项</string>
    <string name="music_fm">音乐FM</string>
    <string name="single_music">单曲</string>
    <string name="music_album">专辑</string>
    <string name="music_lyric">暂无歌词</string>
    <string name="topic_type_hot">热门</string>
    <string name="topic_type_new">最新</string>
    <string name="topic">话题</string>
    <string name="create_feed_topic">创建话题</string>
    <string name="edit_feed_topic">编辑话题</string>
    <string name="recomment_topic">热门话题</string>
    <string name="create_topic_pic_hint">上传话题封面</string>
    <string name="change_topic_pic_hint">更换封面</string>
    <string name="create_topic_title_hint">输入话题标题，10字以内（必填）</string>
    <string name="create_topic_dec_hint">简单介绍一下话题内容</string>
    <string name="create_topic_warning">话题创建成功后，标题不可更改</string>
    <string name="dynamic_publish_select_topic_count_hint">添加话题不可以超过%d个</string>
    <string name="create_topic_go_on">继续</string>
    <string name="create_topic_cancle_tip">确认取消创建话题？</string>
    <string name="edit_topic_cancle_tip">确认取消编辑话题？</string>
    <string name="create_topic_cancle">放弃创建</string>
    <string name="edit_topic_cancle">放弃编辑</string>
    <string name="create_topic_doing">创建中&#8230;</string>
    <string name="modify_topic_doing">修改中&#8230;</string>
    <string name="create_topic_success">恭喜你！成功创建话题</string>
    <string name="create_topic_success_wait">创建成功，等待审核</string>
    <string name="modify_topic_success">成功修改话题</string>
    <string name="dynamic_publish_select_topic">添加话题</string>
    <string name="topic_content_count">%1$d条动态&#160;&#160;&#160;%2$d人关注</string>
    <string name="topic_join_user">参与话题的人</string>
    <string name="topic_creator">创建者：%s</string>
    <string name="info_title">完善文章信息</string>
    <string name="info_editor_default_content">@string/dynamic_content_hint</string>
    <string name="info_title_necessary">请填写正确的标题或者内容</string>
    <string name="info_published">已发布</string>
    <string name="info_publishing">投稿中</string>
    <string name="info_publishsuccess">投稿成功，等待审核</string>
    <string name="info_publishfailed">投稿失败</string>
    <string name="info_publishrefuse">被驳回</string>
    <string name="info_cover">上传封面</string>
    <string name="reset_cover">重置</string>
    <string name="cover_upload_success">封面上传成功</string>
    <string name="info_dig">点赞</string>
    <string name="info_dig_cancel">取消点赞</string>
    <string name="info_list_count">%1$s\t·\t%2$s浏览\t·\t%3$s</string>
    <string name="info_publish_original">原创</string>
    <string name="info_top">顶</string>
    <string name="info_publish_hint">提示</string>
    <string name="info_publish_hint_certification">认证用户才能投稿，去认证？</string>
    <string name="info_publish_go_to_certification">去认证</string>
    <string name="testtym">%1$d,%2$s</string>
    <string name="info_publish_hint_pay">投稿一次需付费%1$d%2$s，是否继续投稿？</string>
    <string name="info_publish_go_to_next">继续投稿</string>
    <string name="edit_info">编辑文章</string>
    <string name="info_title_hint">输入标题，20字以内</string>
    <string name="info_content_hint">编辑文章正文</string>
    <string name="info_choose_categorys">选择栏目</string>
    <string name="info_choose_tags">选择标签</string>
    <string name="info_max_choose_tags_format">最多选择%d个选择</string>
    <string name="info_max_choose_five_tags">最多选择5个标签</string>
    <string name="info_from">文章来源</string>
    <string name="info_from_hint">不填写则默认为原创</string>
    <string name="info_author">作者</string>
    <string name="info_author_hint">不填写则默认为本站用户名</string>
    <string name="info_summary">摘要</string>
    <string name="info_summary_hint">输入摘要信息</string>
    <string name="info_relate">相关资讯</string>
    <string name="info_apply_for_top">申请文章置顶</string>
    <string name="info_alert_reapply_for_top">已经置顶，不能重复申请</string>
    <string name="info_alert_top_auditing">审核中，不能重复申请</string>
    <string name="info_delete">删除</string>
    <string name="info_deleting">删除中</string>
    <string name="dynamic_list_more_comment">查看全部评论</string>
    <string name="dynamic_list_delete_dynamic">删除动态</string>
    <string name="dynamic_list_share_dynamic">分享</string>
    <string name="dynamic_list_collect_dynamic">收藏</string>
    <string name="dynamic_list_uncollect_dynamic">取消收藏</string>
    <string name="dynamic_list_collected_dynamic">已收藏</string>
    <string name="dynamic_list_excellent_post">设为精华帖</string>
    <string name="dynamic_list_unexcellent_post">取消精华帖</string>
    <string name="dynamic_list_report_dynamic">举报</string>
    <string name="dynamic_list_delete_comment">删除评论</string>
    <string name="dynamic_list_top_comment">申请评论置顶</string>
    <string name="dynamic_list_stick_top_comment">置顶评论</string>
    <string name="dynamic_list_resend_comment">重发评论</string>
    <string name="resend">重新发送</string>
    <string name="reply">回复 %s:</string>
    <string name="reply_str">回复</string>
    <string name="send_dynamic">发布帖子</string>
    <string name="feed">动态</string>
    <string name="send_words_dynamic">文字</string>
    <string name="send_image_dynamic">图片</string>
    <string name="send_question">提问</string>
    <string name="send_post">发帖</string>
    <string name="send_info">投稿</string>
    <string name="send_vidoe">视频</string>
    <string name="open_zhibo">直播</string>
    <string name="follow">关注</string>
    <string name="group_mine">我的圈子</string>
    <string name="input_topic_tip">请输入专题名称</string>
    <string name="input_topic_des_tip">请输入专题相关描述信息</string>
    <string name="input_topic_add_cover">添加封面</string>
    <string name="qa_mine">我的问答</string>
    <string name="chat_my_friends">我的好友</string>
    <string name="mine_integration">我的积分</string>
</resources>