<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_mid"
        android:orientation="vertical">

        <com.zhiyicx.thinksnsplus.widget.UserInfoInroduceInputView
            android:id="@+id/et_topic_title"
            style="@style/style_edit_cursor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_mid"
            app:hintContent="@string/input_topic_tip"
            app:limitSize="@integer/dynamic_title_max_size"
            app:showLimitSize="@integer/dynamic_title_input_size"/>

        <View
            style="@style/style_divider_horizontal"
            android:background="@color/feed_back_question"/>

        <com.zhiyicx.thinksnsplus.widget.UserInfoInroduceInputView
            android:id="@+id/et_topic_desc"
            style="@style/style_edit_cursor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_mid"
            app:hintContent="@string/input_topic_des_tip"
            app:limitSize="@integer/feed_back_content_max_size"
            app:showLimitSize="@integer/feed_back_content_input_size"
            app:showLines="@integer/dynamic_content_show_lines"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/input_topic_add_cover"
            android:textColor="@color/general_for_hint"
            android:textSize="@dimen/size_content"/>

        <ImageView
            android:visibility="gone"
            android:id="@+id/tv_choose_topic_cover"
            android:src="@mipmap/img_edit_photo_frame"
            android:layout_marginTop="@dimen/spacing_mid_small_8dp"
            android:layout_width="@dimen/add_topic_add_cover_size"
            android:layout_height="@dimen/add_topic_add_cover_size"/>
    </LinearLayout>
</ScrollView>