<com.wcy.overscroll.OverScrollLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/overscroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zhiyicx.thinksnsplus.modules.home.HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_large">
            <!--头像，用户名，简介-->
            <RelativeLayout
                android:id="@+id/rl_userinfo_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="@dimen/spacing_small">
                <!--头像-->
                <com.zhiyicx.baseproject.widget.UserAvatarView
                    android:id="@+id/iv_head_icon"
                    android:layout_width="@dimen/headpic_for_user_center"
                    android:layout_height="@dimen/headpic_for_user_center"
                    android:layout_marginBottom="@dimen/spacing_normal_large"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_normal_large"
                    android:src="@mipmap/pic_default_secret"
                    app:ts_avatare_size="@dimen/headpic_for_user_center"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginRight="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_bigger_large_35"
                    android:layout_toLeftOf="@+id/iv_right_arrow"
                    android:layout_toRightOf="@+id/iv_head_icon"
                    android:orientation="vertical">
                    <!--用户名-->
                    <TextView
                        android:id="@+id/tv_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:textColor="@color/important_for_content"
                        android:textSize="@dimen/size_sub_title"
                        tools:text="奔跑的蜗牛"/>
                    <!--用户签名-->
                    <TextView
                        android:id="@+id/tv_user_signature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:ellipsize="end"
                        android:includeFontPadding="false"
                        android:maxLines="2"
                        android:textColor="@color/normal_for_assist_text"
                        android:textSize="@dimen/size_content_assist"
                        tools:text="天青色等烟雨，而我在等你，炊烟袅袅升起，晕开了结局"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_right_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/spacing_mid"
                    android:src="@mipmap/ic_arrow_smallgrey"/>
            </RelativeLayout>

            <!--粉丝，关注-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_large"
                >
                <!--粉丝-->
                <RelativeLayout
                    android:id="@+id/ll_fans_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>

                    <!--粉丝数量-->
                    <TextView
                        android:id="@+id/tv_fans_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:includeFontPadding="false"
                        android:textColor="@color/important_for_content"
                        android:textSize="@dimen/fans_count_size"
                        android:textStyle="bold"
                        tools:text="23456" />

                    <com.zhiyicx.baseproject.widget.BadgeView
                        android:id="@+id/bv_fans_new_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_mid_small_8dp"
                        android:layout_marginTop="@dimen/spacing_small_4dp"
                        android:layout_toRightOf="@id/tv_fans_count"
                        android:textSize="@dimen/size_note_assist"
                        android:textStyle="normal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_fans_count"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="3dp"
                        android:includeFontPadding="false"
                        android:text="@string/fans"
                        android:textColor="@color/normal_for_assist_text"
                        android:textSize="@dimen/size_icon_assist" />
                </RelativeLayout>

                <!--关注-->
                <LinearLayout
                    android:id="@+id/ll_follow_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>

                    <!--关注数量-->
                    <TextView
                        android:id="@+id/tv_follow_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:includeFontPadding="false"
                        android:textColor="@color/important_for_content"
                        android:textSize="@dimen/fans_count_size"
                        android:textStyle="bold"
                        tools:text="12233"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small_3dp"
                        android:includeFontPadding="false"
                        android:text="@string/follow"
                        android:textColor="@color/normal_for_assist_text"
                        android:textSize="@dimen/size_icon_assist"/>
                </LinearLayout>

                <!--好友-->
                <RelativeLayout
                    android:id="@+id/ll_friends_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>

                    <!--粉丝数量-->
                    <TextView
                        android:id="@+id/tv_friends_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:includeFontPadding="false"
                        android:textColor="@color/important_for_content"
                        android:textSize="@dimen/fans_count_size"
                        android:textStyle="bold"
                        tools:text="23456"/>

                    <com.zhiyicx.baseproject.widget.BadgeView
                        android:id="@+id/bv_friends_new_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_mid_small_8dp"
                        android:layout_marginTop="@dimen/spacing_small_4dp"
                        android:layout_toRightOf="@id/tv_friends_count"
                        android:textSize="@dimen/size_note_assist"
                        android:textStyle="normal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_friends_count"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/spacing_small_3dp"
                        android:includeFontPadding="false"
                        android:text="@string/friends"
                        android:textColor="@color/normal_for_assist_text"
                        android:textSize="@dimen/size_icon_assist"/>

                </RelativeLayout>

            </LinearLayout>

            <!--个人主页-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/bt_personal_page"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                android:layout_marginTop="@dimen/spacing_mid"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/ico_me_homepage"
                app:leftText="@string/personal_page"
                app:rightImage="@mipmap/ic_arrow_smallgrey"
                app:showLine="true"/>
            <!--认证-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/bt_certification"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                android:visibility="visible"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/ico_me_identification"
                app:leftText="@string/certification"
                app:rightImage="@mipmap/ic_arrow_smallgrey"/>
            <!--钱包-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/bt_wallet"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/ico_me_wallet"
                app:leftText="@string/mine_wallet"
                app:rightImage="@mipmap/ic_arrow_smallgrey"
                app:showLine="true"/>

            <!--我的积分-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/bt_mine_integration"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/ico_me_integral"
                app:leftText="@string/mine_integration"
                app:rightImage="@mipmap/ic_arrow_smallgrey"
                app:showLine="false"/>

            <!--我的投稿-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/bt_my_info"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                android:layout_marginTop="@dimen/spacing_mid"
                android:visibility="visible"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/ico_me_contribute"
                app:leftText="@string/my_info"
                app:rightImage="@mipmap/ic_arrow_smallgrey"
                app:showLine="true"/>


            <!--我的圈子-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/bt_my_group"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                android:visibility="visible"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/ico_me_circle"
                app:leftText="@string/group_mine"
                app:rightImage="@mipmap/ic_arrow_smallgrey"
                app:showLine="false"/>

            <!--我的好友-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/bt_my_friends"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                android:visibility="gone"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/ico_me_circle"
                app:leftText="@string/chat_my_friends"
                app:rightImage="@mipmap/ic_arrow_smallgrey"
                app:showLine="false"/>

            <!--收藏-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/bt_collect"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                android:visibility="visible"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/ico_me_collect"
                app:leftText="@string/mine_collect"
                app:rightImage="@mipmap/ic_arrow_smallgrey"
                app:showLine="true"
                app:showTopLine="true"/>

            <!--我的问答-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/bt_my_qa"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                android:visibility="visible"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/ico_me_qa"
                app:leftText="@string/qa_mine"
                app:rightImage="@mipmap/ic_arrow_smallgrey"
                app:showLine="false"/>
            <!--购买的音乐-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/bt_music"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                android:visibility="gone"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/ico_me_music"
                app:leftText="@string/me_music"
                app:rightImage="@mipmap/ic_arrow_smallgrey"
                app:showLine="false"/>


            <!--意见反馈-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/bt_suggestion"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                android:layout_marginTop="@dimen/spacing_mid"
                android:visibility="gone"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/ico_me_advance"
                app:leftText="@string/suggetion"
                app:rightImage="@mipmap/ic_arrow_smallgrey"/>

            <!--草稿箱-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/bt_draft_box"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                android:layout_marginTop="@dimen/spacing_mid"
                android:visibility="visible"
                app:dividerLeftMargin="@dimen/spacing_normal"
                app:dividerRightMargin="@dimen/spacing_normal"
                app:leftImage="@mipmap/ico_me_draft"
                app:leftText="@string/draft_box"
                app:rightImage="@mipmap/ic_arrow_smallgrey"/>

            <!--设置-->
            <com.zhiyicx.baseproject.widget.button.CombinationButton
                android:id="@+id/bt_setting"
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_button_height"
                app:leftImage="@mipmap/ico_me_setting"
                app:leftText="@string/setting"
                app:rightImage="@mipmap/ic_arrow_smallgrey"
                app:showLine="false"/>

        </LinearLayout>
    </ScrollView>
</com.wcy.overscroll.OverScrollLayout>
